RESOLVED FIXED113944
[BlackBerry] DOMSupport::isFixedPositionOrHasFixedPositionAncestor stops traversing render tree when it hits an iframe element
https://bugs.webkit.org/show_bug.cgi?id=113944
Summary [BlackBerry] DOMSupport::isFixedPositionOrHasFixedPositionAncestor stops trav...
Andrew Lo
Reported 2013-04-04 11:19:11 PDT
DOMSupport::isFixedPositionOrHasFixedPositionAncestor should continue traversing up the render tree if the render object is a render view with an html element owner, when checking whether an ancestor is fixed position.
Attachments
Patch (2.48 KB, patch)
2013-04-04 11:31 PDT, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-04-04 11:31:03 PDT
Rob Buis
Comment 2 2013-04-04 11:44:02 PDT
Comment on attachment 196498 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=196498&action=review Ok. > Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp:643 > + if (!currentRenderer->parent() && currentRenderer->isRenderView() && currentRenderer->frame() && currentRenderer->frame()->ownerElement()) { Not sure if RenderView can have a parent in practice...
WebKit Commit Bot
Comment 3 2013-04-04 20:44:44 PDT
Comment on attachment 196498 [details] Patch Clearing flags on attachment: 196498 Committed r147701: <http://trac.webkit.org/changeset/147701>
WebKit Commit Bot
Comment 4 2013-04-04 20:44:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.